--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 </body>
 
 <script>
-    var countDownDate = new Date("Jan 1, 2024 00:00:00").getTime();
+    let countDownDate = new Date("Jan 1, 2024 00:00:00").getTime();
 
-    var x = setInterval(function() {
+    let x = setInterval(function() {
 
-    var now = new Date().getTime();
+    let now = new Date().getTime();
 
-    var distance = countDownDate - now;
+    let distance = countDownDate - now;
 
-    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    let days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    let hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    let minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    let seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
     document.getElementById("time").innerHTML = days + "д. " + hours + "ч. "
      + minutes + "м. " + seconds + "сек.";
